--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3220,3 +3220,39 @@ section {
    50%  { opacity:1; }
    100% { transform: scale(1.2); opacity:0; }
 }
+
+/** Cookies **/
+.box-cookies.hide {
+  display: none !important;
+}
+
+.box-cookies {
+  position: fixed;
+  background: rgba(0, 0, 0, .9);
+  width: 100%;
+  z-index: 998;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.box-cookies .msg-cookies,
+.box-cookies .btn-cookies {
+  text-align: center;
+  padding: 25px;
+  color: #fff;
+  font-size: 18px;
+}
+
+.box-cookies .btn-cookies {
+  background: #1e88e5;
+  cursor: pointer;
+  align-self: normal;
+}
+
+@media screen and (max-width: 600px) {
+  .box-cookies {
+    flex-direction: column;
+  }
+}
