--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3232,23 +3232,26 @@ section {
   width: 100%;
   z-index: 998;
   bottom: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .box-cookies .msg-cookies,
-.box-cookies .btn-cookies {
+.box-cookies .btn-cookies-accept  .btn-cookies-reject {
   text-align: center;
   padding: 25px;
   color: #fff;
   font-size: 18px;
 }
 
-.box-cookies .btn-cookies {
+.box-cookies .btn-cookies-accept  .btn-cookies-reject {
   background: #1e88e5;
   cursor: pointer;
   align-self: normal;
+}
+
+.btn-cookies-style {
+  background-color:cadetblue !important;
+  border: 0px !important;
+  margin-left: 1px;
 }
 
 @media screen and (max-width: 600px) {
